--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,13 @@ body {
 h1 {
   color: red;
   font-size: 5rem;
-  font-family: "PT Serif", serif;
+  font-family: "Rubik Glitch", serif;
 }
 
 h2 {
   color: red;
   font-size: 5rem;
-  font-family: "PT Serif", serif;
+  font-family: "Rubik Glitch", serif;
 }
 
 p {
